--- a/labs/lab01/report/bib/cite.bib
+++ b/labs/lab01/report/bib/cite.bib
@@ -49,4 +49,7 @@
   URL = {http://www.amazon.com/Learning-bash-Shell-Programming-Nutshell/dp/0596009658},
   Year = {2005},
 }
-
+@online{course,
+Title = {Лабораторная работа 1. Простые модели компьютерной сети.},
+Author = {Кулябов Д.С., Королькова А.В.},
+}
